# watercolor-tutor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: v0-scope.md
src/watercolor_tutor/: __init__.py  __main__.py  classifier.py  config.py  conversation.py  graph.py  images.py  ingest.py  llm.py  logging_config.py  mcp_search.py  observability.py  retrieval.py  routing.py  state.py
src/watercolor_tutor/api/: __init__.py  __main__.py  schemas.py  server.py
src/watercolor_tutor/api/static/: app.js  index.html  style.css
src/watercolor_tutor/knowledge/: 00-diagnostics.md  01-materials.md  02-brush-control.md  03-flat-wash.md  __init__.py
src/watercolor_tutor/nodes/: __init__.py  advance.py  answer.py  await_learner.py  classify.py  go_back.py  reexplain.py  reference.py  respond.py  teach.py  vision_feedback.py  web_search.py  welcome.py
src/watercolor_tutor/prompts/: __init__.py
tests/: conftest.py  test_api.py  test_classifier.py  test_classify_node.py  test_graph.py  test_grounding.py  test_images.py  test_ingest.py  test_knowledge.py  test_mcp_search.py  test_observability.py  test_persistence.py  test_prompts.py  test_qa_nodes.py  test_reference.py  test_routing.py  test_state.py  test_teach.py  test_v2_nodes.py  test_vision.py  test_web_search.py
