[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watercolor-tutor"
version = "0.1.0"
description = "An agentic AI that teaches beginners to paint watercolors, step by step."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aastha Khatgarh" }]
dependencies = [
    "langgraph>=1.2,<2.0",
    "anthropic>=0.40",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # RAG backend (v2 Slice 2.6) — production-shape demo: FAISS vector store +
    # local transformer embeddings. Heavier than the corpus needs (torch arrives
    # via sentence-transformers); chosen deliberately to rehearse the scalable
    # architecture behind the unchanged retrieve() interface.
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    # Durable LangGraph checkpointing (v2 Slice 3a) — SQLite-backed session state
    # so a returning learner resumes across app restarts.
    "langgraph-checkpoint-sqlite>=3.1",
    # MCP client (v2 Slice 3b-1) — the agent CONSUMES an external web-search MCP
    # server. duckduckgo-mcp-server is the no-key default; swappable via config.
    "mcp>=1.2",
    "duckduckgo-mcp-server>=0.4",
    # Image-search MCP server (v2 Slice 3b-2) — no-key reference images; makes the
    # agent a MULTI-server MCP client. Swappable via config.
    "ddg-mcp>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
watercolor-tutor = "watercolor_tutor.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/watercolor_tutor"]

[tool.ruff]
# src layout: tell ruff where first-party code lives so import sorting is correct.
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# A pragmatic, readable default set: pyflakes, pycodestyle, isort, bugbear, pyupgrade.
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
# Point pytest at the installed package; keep test discovery explicit.
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
# Strict-ish: catch real type bugs without drowning a learner in noise.
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# LangGraph/anthropic ship types, but be lenient if a stub is missing.
ignore_missing_imports = true
files = ["src", "tests"]

# Tests use lightweight fake objects (e.g. a stub Anthropic client). Requiring
# full annotations there is noise, not safety — keep strict typing on `src`.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
